<resources>
    <string name="app_name">Safe Park</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signuphere" />
    <string name="bank_details">Bank Details</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_code">Bank Code</string>
    <string name="branch_name">Branch Name</string>
    <string name="branch_code">Branch Code</string>
    <string name="full_name">Full Name</string>
    <string name="account_number">Account Number</string>
    <string name="nic_number">NIC Number</string>
    <string name="park_details">Park Details</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="park_name">Park Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HomeScreen</string>
    <string name="logout">Logout</string>
    <string name="conditions">Please note that 5% service fee will be charged per vehicle that uses this app to park their vehicles.</string>
    <string name="google_maps_key">AIzaSyDIfnOSMXTWZp2MH1GCV7riVGxrnKsnlPM</string>
    <string name="menu_contactUs">Contact Us</string>
</resources>