<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2955CE"
        android:fillViewport="true"
        tools:context=".ParkOwnerSignUpActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/parkOwnerNameField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="20dp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="48dp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:hint="@string/full_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/parkOwnerEmailField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="20dp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="48dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/parkOwnerPhoneNumberField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="20dp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:height="48dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:hint="@string/phone_number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/parkOwnerPasswordField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="20dp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:endIconTint="@color/white"
                app:hintTextColor="@color/white"
                app:passwordToggleEnabled="true"
                app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="48dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:hint="@string/password"
                    android:password="true"
                    tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/parkOwnerConfirmPasswordField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="20dp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:endIconTint="@color/white"
                app:hintTextColor="@color/white"
                app:passwordToggleEnabled="true"
                app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="48dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:hint="@string/confirm_password"
                    android:password="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/bankDetailsBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="20dp"
                android:width="300dp"
                android:height="60dp"
                android:backgroundTint="@color/white"
                android:text="@string/bank_details"
                android:textColor="#2955CE" />


    </LinearLayout>
</ScrollView>